modules/VPC/internetgateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

   tags = merge( var.tags,
    {
    Name = format ("%s-IGW", var.name )
    },
  )
}
